# capirov2

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLIO_USER_GUIDE.md  CUsersneomaAppDataLocalTempstaging-api-td.json  OVERNIGHT_BLOCKERS.md  OVERNIGHT_DECISIONS.md  OVERNIGHT_DECISIONS_BROWSER.md  OVERNIGHT_DECISIONS_CODE_EXEC.md  OVERNIGHT_DECISIONS_LOCKED.md  OVERNIGHT_DECISIONS_MCP.md  OVERNIGHT_EXTERNAL_CHANGES.md  OVERNIGHT_FINDINGS.md  OVERNIGHT_LOG.md  OVERNIGHT_NEXT_DEPLOY.md  README.md  capiro-auth.cer  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.cache/: engagement-secrets-policy-explicit.json  engagement-secrets-policy.json
.hermes/: b3-briefing-card-prompt.md  c2-roi-quarter-chart-prompt.md  c3-fec-panel-prompt.md  c4-district-nexus-prompt.md  c5-financial-links-prompt.md  chat-copilot-prompt.md  client-profile-full-prompt.md  client-profile-prompt.md  d1-bill-kanban-prompt.md  d2-passage-probability-prompt.md  d3-reg-lifecycle-rail-prompt.md  d4-hearings-markups-prompt.md  d5-retire-bill-tracker-prompt.md  d6-bill-kanban-controls-prompt.md  deploy-all-prompt.md  deploy-phaseA-prompt.md  deploy-prompt.md  deploy-staging-prompt.md  deploy-web-prompt.md  documents-tab-prompt.md  e1-office-recommender-prompt.md  e2-resolution-graph-card-prompt.md  e3-exstaffer-foldin-prompt.md  engagement-campaigns-prompt.md  epic-a-followup-prompt.md  fix-ui-issues-prompt.md  (+36 more)
apps/clio/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/clio-sandbox/: Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json
apps/clio-sandbox/scripts/: pentest.ts
apps/clio-sandbox/src/: harness.py  run.ts  server.ts
apps/clio-sandbox/src/sandbox/: config.py  runner.py  server.py  storage.py
apps/clio/src/clio/: agent_loop.py  bedrock.py  config.py  main.py  models.py
apps/clio/tests/: test_main.py
(+1483 files in other folders)
