[project]
name = "clio-sandbox"
version = "0.1.0"
description = "Sandboxed Python code execution + file artifact upload for the Clio agent."
requires-python = ">=3.11,<3.13"

# Runtime libs available to user-submitted code.
# Pinned to recent stable releases so the model doesn't surprise us
# with API drift between deploys.
dependencies = [
  # Web service
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "boto3==1.35.95",
  "structlog==24.4.0",
  # Libs exposed to the runner subprocess
  "pandas==2.2.3",
  "numpy==2.2.1",
  "openpyxl==3.1.5",
  "python-docx==1.1.2",
  "python-pptx==1.0.2",
  "reportlab==4.2.5",
  "pypdf==5.1.0",
  "Pillow==11.0.0",
  "requests==2.32.3",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
